--- a/NuiOS/Base.lproj/SignUp.storyboard
+++ b/NuiOS/Base.lproj/SignUp.storyboard
@@ -200,7 +200,7 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="key" value="name"/>
+                        <userDefinedRuntimeAttribute type="string" keyPath="key" value="displayName"/>
                         <userDefinedRuntimeAttribute type="number" keyPath="minCharacters">
                             <integer key="value" value="4"/>
                         </userDefinedRuntimeAttribute>
@@ -1137,6 +1137,7 @@
         <image name="see-password-selected" width="34" height="34"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="KC0-wi-rVj"/>
         <segue reference="2gB-HV-K4w"/>
         <segue reference="jtW-Fw-leu"/>
         <segue reference="dgJ-WZ-WuP"/>
